# TileEngine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  shader.cpp
Editor/: CMakeLists.txt  Editor.cpp  Editor.hpp  main.cpp
Game/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
LibEconSimPlusPlus/: CMakeLists.txt
LibEconSimPlusPlus/EconSimPlusPlus/: Anchor.cpp  Anchor.hpp  Button.cpp  Button.hpp  ButtonSettings.hpp  ButtonStyle.hpp  Camera.cpp  Camera.hpp  Direction.hpp  Event.hpp  Font.cpp  Font.hpp  FontSettings.hpp  FontStyle.hpp  FrameTimer.cpp  FrameTimer.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Glyph.cpp  Glyph.hpp  Graphics.hpp  GridLines.cpp  GridLines.hpp  Group.cpp  Group.hpp  GuiObject.cpp  GuiObject.hpp  Image.cpp  Image.hpp  InputState.cpp  InputState.hpp  KeyModifier.cpp  KeyModifier.hpp  Object.cpp  Object.hpp  Outline.cpp  Outline.hpp  Panel.cpp  (+35 more)
LibEconSimPlusPlus/EconSimPlusPlus/Engine/: Anchor.cpp  Anchor.hpp  Button.cpp  Button.hpp  ButtonSettings.hpp  Camera.cpp  Camera.hpp  Direction.hpp  Font.cpp  Font.hpp  FontSettings.hpp  FrameTimer.cpp  FrameTimer.hpp  Game.cpp  Game.hpp  GameObject.hpp  Glyph.hpp  GridLines.cpp  GridLines.hpp  GuiObject.cpp  GuiObject.hpp  InputState.hpp  Quad.cpp  Quad.hpp  Shader.cpp  Shader.hpp  SignedDistanceField.cpp  SignedDistanceField.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp  TextureArray.hpp  TileMap.cpp  TileMap.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Viewport.hpp  (+2 more)
LibEconSimPlusPlusEditor/: CMakeLists.txt
LibEconSimPlusPlusEditor/EconSimPlusPlus/Editor/: Button.cpp  Button.hpp  Dialog.hpp  Editor.cpp  Editor.hpp  GuiObject.cpp  GuiObject.hpp  MessageDialog.cpp  MessageDialog.hpp  OpenFileDialog.cpp  OpenFileDialog.hpp  OpenTileMapForm.cpp  OpenTileMapForm.hpp  SaveFileDialog.cpp  SaveFileDialog.hpp  Text.cpp  Text.hpp
LibTileEngine/: CMakeLists.txt
LibTileEngine/TileEngine/: Anchor.cpp  Anchor.hpp  Button.cpp  Button.hpp  Camera.cpp  Camera.hpp  Direction.hpp  Event.hpp  Font.cpp  Font.hpp  FrameTimer.cpp  FrameTimer.hpp  Glyph.cpp  Glyph.hpp  Graphics.hpp  GridLines.cpp  GridLines.hpp  Group.cpp  Group.hpp  Image.cpp  Image.hpp  InputState.cpp  InputState.hpp  KeyModifier.cpp  KeyModifier.hpp  Object.cpp  Object.hpp  Outline.cpp  Outline.hpp  Quad.cpp  Quad.hpp  Shader.cpp  Shader.hpp  SignedDistanceField.cpp  SignedDistanceField.hpp  Text.cpp  Text.hpp  TextCaret.cpp  TextCaret.hpp  TextField.cpp  (+18 more)
LibTileMapEditor/: CMakeLists.txt
LibTileMapEditor/TileEngine/Editor/: Dialog.hpp  MessageDialog.cpp  MessageDialog.hpp  OpenFileDialog.cpp  OpenFileDialog.hpp  SaveFileDialog.cpp  SaveFileDialog.hpp
apps/: CMakeLists.txt  editor.cpp  game.cpp
glad/src/: glad.c
include/: Camera.h  Direction.h  DirectionalLight.h  Game.h  InputState.h  KeyboardInput.h  KeyboardState.h  Material.h  MouseInput.h  PointLight.h  Shader.h  ShaderParser.h  Size.h  SpotLight.h  Texture.h  Tile.h  TileGrid.h  TileGridView.h  TileGridViewer.h  TileMap.h  TileRegistry.h  TileType.h  TileTypes.h  VertexArray.h  VertexBuffer.h  Window.h  shader.h
include/EconSimPlusPlus/: Camera.h  Camera.hpp  Direction.hpp  (+27 more)
lib/: CMakeLists.txt
lib/freetype/builds/cmake/: FindBrotliDec.cmake  FindHarfBuzz.cmake  iOS.cmake
lib/freetype/builds/meson/: extract_freetype_version.py  extract_libtool_version.py  generate_reference_docs.py  parse_modules_cfg.py
lib/freetype/builds/wince/vc2005-ce/: index.html
lib/freetype/builds/wince/vc2008-ce/: index.html
lib/freetype/builds/windows/vc2010/: index.html
lib/freetype/builds/windows/visualc/: index.html
lib/freetype/builds/windows/visualce/: index.html
lib/freetype/docs/reference/: 404.html  ft2-auto_hinter.html  ft2-basic_types.html  ft2-bdf_fonts.html
lib/freetype/docs/reference/search/: search_index.json
lib/freetype/docs/reference/stylesheets/: extra.css
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/docs/: DoxygenLayout.xml  extra.css  extra.scss  footer.html  header.html
lib/glfw/examples/: boing.c  gears.c  heightmap.c  offscreen.c  particles.c  sharing.c  splitview.c  triangle-opengl.c  triangle-opengles.c  wave.c  windows.c
lib/glfw/include/GLFW/: glfw3.h  glfw3native.h
lib/glfw/src/: cocoa_init.m  cocoa_joystick.h  cocoa_joystick.m  cocoa_monitor.m  cocoa_platform.h  cocoa_time.c  cocoa_time.h  cocoa_window.m  context.c  egl_context.c  glfw.rc.in  glx_context.c  init.c  input.c  internal.h  linux_joystick.c  linux_joystick.h  mappings.h  monitor.c  nsgl_context.m  null_init.c  null_joystick.c  null_joystick.h  null_platform.h  null_window.c  osmesa_context.c  platform.c  platform.h  posix_module.c  posix_thread.c  posix_thread.h  posix_time.c  posix_time.h  vulkan.c  wgl_context.c  win32_init.c  win32_joystick.c  win32_joystick.h  win32_module.c  win32_monitor.c  (+17 more)
lib/glfw/tests/: allocator.c  clipboard.c  cursor.c  empty.c  events.c  gamma.c  glfwinfo.c  icon.c  iconify.c  inputlag.c  joysticks.c  monitors.c  msaa.c  reopen.c  tearing.c  threads.c  timeout.c  title.c  triangle-vulkan.c  window.c
lib/stb_image/: stb_image.cpp
lib/stb_image/include/: stb_image.h  stb_image_resize2.h  stb_image_write.h
resource/: terrain.yaml
src/: CMakeLists.txt  Camera.cpp  DeadReckoningAlgorithm.cpp  Font.cpp  FourSed.cpp  FrameTimer.cpp  Game.cpp  Game.h  GameObject.cpp  Glyph.cpp  GridLines.cpp  InputState.cpp  KeyboardInput.cpp  KeyboardState.cpp  KeyboardState.h  MouseInput.cpp  Shader.cpp  ShaderParser.cpp  SignedDistanceField.cpp  Texture.cpp  TextureArray.cpp  Tile.cpp  TileGrid.cpp  TileGrid.h  TileGridView.cpp  TileGridViewer.cpp  TileMap.cpp  TileRegistry.cpp  TileRegistry.h  TileTypes.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  main.cpp  shader.cpp  stb_image.cpp
src/editor/: Button.cpp  CMakeLists.txt  Editor.cpp
src/engine/: Camera.cpp  Font.cpp  FrameTimer.cpp  Game.cpp  GameObject.cpp  Glyph.cpp  GridLines.cpp  InputState.cpp  Shader.cpp  SignedDistanceField.cpp  Texture.cpp  TextureArray.cpp  TileMap.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp
(+39 files in other folders)
